2009-11-19  Beth Dakin  <bdakin@apple.com>

        Reviewed by Darin Adler.

        Fix for https://bugs.webkit.org/show_bug.cgi?id=31321 Make -webkit-
        color-correction work with untagged images

        Image's draw(), drawPattern(), and fillWithSolidColor() functions 
        now take a ColorSpace. A bunch of classes inherit from Image, so 
        draw() and drawPattern() functions there must also take a 
        ColorSpace.
        * platform/graphics/Image.cpp:
        (WebCore::Image::fillWithSolidColor):
        (WebCore::Image::drawTiled):
        * platform/graphics/Image.h:
        * platform/graphics/BitmapImage.h:
        * platform/graphics/GeneratedImage.cpp:
        (WebCore::GeneratedImage::draw):
        (WebCore::GeneratedImage::drawPattern):
        * platform/graphics/GeneratedImage.h:
        * platform/graphics/cg/PDFDocumentImage.cpp:
        (WebCore::PDFDocumentImage::draw):
        * platform/graphics/cg/PDFDocumentImage.h:
        * svg/graphics/SVGImage.cpp:
        (WebCore::SVGImage::draw):
        * svg/graphics/SVGImage.h:

        All of the drawImage() functions and drawTiled() functions of 
        GraphicsContext now take a ColorSpace.
        * platform/graphics/GraphicsContext.cpp:
        (WebCore::GraphicsContext::drawImage):
        (WebCore::GraphicsContext::drawTiledImage):
        * platform/graphics/GraphicsContext.h:

        This is where the actual work is done.
        * platform/graphics/cg/ImageCG.cpp:
        (WebCore::imageWithColorSpace): New static function that returns a 
        copy of the given image in the given ColorSpace *IF* we should use 
        the given ColorSpace. We will ignore the color space if the image 
        is tagged and return 0. 
        (WebCore::BitmapImage::draw): Now takes a ColorSpace and uses it to 
        call imageWithColorSpace(). 
        (WebCore::Image::drawPattern): Same.

        Attempt to keep all ports building. 